tests/fail/grid_sort_unknown_col.msh
[| x; 1; 2 |] "missing" sortBy
